[package]
name = "rust-pd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mal = {path = "mal-pd/"}

[[bin]]
name = "step0_repl"
path = "src/step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "src/step1_read_print.rs"
[[bin]]
name = "step2_eval"
path = "src/step2_eval.rs"
